// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`home-assistant/core pipeline scenarios PR opened: bugfix touching one integration 1`] = `
[
  {
    "section": {
      "id": "merge-conflict",
      "message": "No merge conflicts.",
      "status": "pass",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`bugfix\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "assignees": [
      "balloob",
    ],
    "type": "addAssignees",
  },
  {
    "body": "Hey there @balloob, mind taking a look at this pull request as it has been labeled with an integration (\`hue\`) you are listed as a [code owner](https://github.com/home-assistant/core/blob/HEAD/CODEOWNERS#L1) for? Thanks!",
    "type": "comment",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Platinum integration — needs approval from a code owner before merging.",
      "status": "fail",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "integration: hue",
      "Top 50",
      "Top 100",
      "Top 200",
      "Quality Scale: platinum",
      "bugfix",
      "has-tests",
      "small-pr",
    ],
    "type": "addLabels",
  },
]
`;

exports[`home-assistant/core pipeline scenarios PR opened: new integration without a docs PR 1`] = `
[
  {
    "section": {
      "id": "merge-conflict",
      "message": "No merge conflicts.",
      "status": "pass",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`new-integration\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Validation passed.",
      "status": "pass",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Missing documentation PR",
      "status": "fail",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "integration: awesome",
      "Quality Scale: bronze",
      "new-integration",
      "has-tests",
    ],
    "type": "addLabels",
  },
]
`;

exports[`home-assistant/core pipeline scenarios PR opened: dependency-only bump 1`] = `
[
  {
    "section": {
      "id": "merge-conflict",
      "message": "No merge conflicts.",
      "status": "pass",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "small-pr",
      "metadata-only",
      "dependency-bump",
    ],
    "type": "addLabels",
  },
]
`;

exports[`home-assistant/core pipeline scenarios PR synchronized: merge conflict against base 1`] = `
[
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-conflict",
      "message": "Branch has merge conflicts with the base.",
      "status": "fail",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`bugfix\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "blocking-label-awaiting-frontend",
      "message": "\`awaiting-frontend\` label not set — nothing to block.",
      "status": "skip",
      "title": "Blocking: awaiting-frontend",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Platinum integration — needs approval from a code owner before merging.",
      "status": "fail",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "Top 50",
      "Top 100",
      "Top 200",
      "Quality Scale: platinum",
      "small-pr",
    ],
    "type": "addLabels",
  },
  {
    "label": [
      "has-tests",
    ],
    "type": "removeLabels",
  },
]
`;

exports[`home-assistant/core pipeline scenarios PR labeled: blocking label awaiting-frontend 1`] = `
[
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "blocking-label-awaiting-frontend",
      "message": "This PR is awaiting changes to the frontend",
      "status": "fail",
      "title": "Blocking: awaiting-frontend",
    },
    "type": "dashboardSection",
  },
]
`;

exports[`home-assistant/core pipeline scenarios issue labeled with an integration: code owners get pinged 1`] = `
[
  {
    "assignees": [
      "balloob",
    ],
    "type": "addAssignees",
  },
  {
    "body": "Hey there @balloob, mind taking a look at this issue as it has been labeled with an integration (\`hue\`) you are listed as a [code owner](https://github.com/home-assistant/core/blob/HEAD/CODEOWNERS#L1) for? Thanks!",
    "type": "comment",
  },
]
`;

exports[`home-assistant/core pipeline scenarios command: code owner adds needs-more-information 1`] = `
[
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Platinum integration — needs approval from a code owner before merging.",
      "status": "fail",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "needs-more-information",
      "Quality Scale: platinum",
    ],
    "type": "addLabels",
  },
]
`;

exports[`home-assistant/core pipeline scenarios command: code owner closes an issue 1`] = `
[
  {
    "state": "closed",
    "type": "setState",
  },
]
`;

exports[`home-assistant/core pipeline scenarios command: non-owner is rejected 1`] = `undefined`;
